--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -287,6 +287,7 @@ eval_split: 'validation'
 # for HuggingFace input pipeline (dataset_type=hf)
 hf_path: ''
 hf_eval_path: ''
+hf_access_token: ''
 # for Grain input pipeline (dataset_type=grain)
 grain_train_files: ''
 grain_eval_files: ''
