--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -288,6 +288,8 @@ eval_split: 'validation'
 hf_path: ''
 hf_eval_path: ''
 hf_access_token: ''
+hf_random_access: True
+hf_worker_count: 1
 # for Grain input pipeline (dataset_type=grain)
 grain_train_files: ''
 grain_eval_files: ''
