--- a/MaxText/configs/models/gpt3-small-jamo.yml
+++ b/MaxText/configs/models/gpt3-small-jamo.yml
@@ -35,6 +35,8 @@ decoder_block: "gpt3"
 gradient_clipping_threshold: 1.
 adam_b1: 0.9
 adam_b2: 0.95
-adam_eps: 1.e-8
+adam_eps: 1.e-7
 adam_weight_decay: 0.1
 attention: "dot_product"
+
+weight_dtype: "bfloat16"
