--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -285,6 +285,7 @@ dataset_path: "" # your path given as argument in download_dataset.sh, e.g. "gs:
 dataset_name: 'c4/en:3.0.1'
 eval_dataset_name: 'c4/en:3.0.1'
 eval_split: 'validation'
+drop_last_batch: True
 # for HuggingFace input pipeline (dataset_type=hf)
 hf_path: ''
 hf_eval_path: ''
