--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -292,6 +292,7 @@ hf_eval_path: ''
 hf_access_token: ''
 hf_random_access: True
 hf_worker_count: 1
+hf_eval_worker_count: 1
 hf_packing: True
 # for Grain input pipeline (dataset_type=grain)
 grain_train_files: ''
