feat: fine epoch using grain feature, rows counter

--- a/MaxText/configs/base.yml
+++ b/MaxText/configs/base.yml
@@ -324,6 +324,7 @@ hf_worker_count: 1
 hf_eval_worker_count: 1
 hf_packing: True
 hf_token_counter: True
+hf_row_counter: True
 # for Grain input pipeline (dataset_type=grain)
 grain_train_files: ''
 grain_eval_files: ''
@@ -507,4 +508,4 @@ wandb_token: ''
 
 jax_debug_nans: False
 
-cumulative_metrics: ['token_count']
+cumulative_metrics: ['token_count', "rows_count"]
