--- a/MaxText/configs/models/llama-ablation.yml
+++ b/MaxText/configs/models/llama-ablation.yml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 # model config for llama-tiny-jamo
+# 417645568 parameters without token embeddings, 432587776 parameters with token embeddings
 
 base_emb_dim: 1024
 base_num_query_heads: 16
