--- a/MaxText/configs/models/llama3.2-1b-jamo.yml
+++ b/MaxText/configs/models/llama3.2-1b-jamo.yml
@@ -27,5 +27,6 @@ logits_via_embedding: True
 normalization_layer_epsilon: 1.0e-5
 rope_max_timescale: 500_000
 decoder_block: "llama2" # Uses the same decoder block as llama2
+attention: "dot_product"
 
 rope_type: "llama3.1"
